--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>Catalin Popa</title>
   <style>
     :root {
-      --bg: rgb(16, 16, 16);
+      --bg: #1e1e1e;
       --fg: #eaeaea;
       --muted: #b0b0b0;
-      --line: #444;
+      --line: #555;
+      --link: #4da6ff;
+      --link-hover: #80c1ff;
+      --code-bg: #2b2b2b;
+      --code-fg: #dcdcdc;
+      --code-border: #444;
     }
 
     * {
@@ -20,117 +26,180 @@
       background-color: var(--bg);
       color: var(--fg);
       font-family: "Courier New", Courier, monospace;
-      font-size: 18px;
-      line-height: 1.35;
+      font-size: 16px;
+      line-height: 1.3;
     }
 
     .container {
-      max-width: 1200px;
-      margin: 32px auto;
-      padding: 0 24px;
+      max-width: 1000px;
+      margin: 24px auto;
+      padding: 0 16px;
     }
 
     header {
       text-align: center;
-      margin-bottom: 24px;
+      margin-bottom: 16px;
     }
 
     header h1 {
       margin: 0;
-      font-size: 24px;
+      font-size: 22px;
       letter-spacing: 1px;
-    }
-
-    nav {
-      margin-top: 6px;
-      font-size: 16px;
-    }
-
-    nav a {
-      color: var(--fg);
-      text-decoration: none;
-      margin: 0 6px;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
     }
 
     hr {
       border: none;
-      border-top: 2px solid var(--line);
-      margin: 20px 0;
+      border-top: 1px solid var(--line);
+      margin: 16px 0;
     }
 
     .section {
-      margin-bottom: 28px;
+      margin-bottom: 20px;
     }
 
     .section-title {
-      font-size: 18px;
+      font-size: 17px;
       letter-spacing: 1px;
       margin: 0 0 2px 0;
     }
 
     .section hr {
-        margin: 2px 0 8px 0;
+      margin: 2px 0 6px 0;
     }
 
     .section-content {
-      margin-top: 3px;
+      font-size: 15px;
+      margin-top: 2px;
       color: var(--fg);
     }
 
-    .posts {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      column-gap: 20px;
-      row-gap: 2px;
-    }
-
-    .date {
-      color: var(--muted);
-      white-space: nowrap;
-    }
-
-    .title {
+    .subsection-content {
+      font-size: 13px;
+      margin-top: 2px;
       color: var(--fg);
+    }
+
+    h3 {
+      font-size: 14px;
+      margin: 10px 0 4px 0;
+    }
+
+    h4 {
+      font-size: 13px;
+      margin: 8px 0 2px 0;
+    }
+
+    ul {
+      padding-left: 20px;
+      margin: 4px 0;
+    }
+
+    li {
+      margin-bottom: 4px;
+    }
+
+    a {
+      color: var(--link);
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: var(--link-hover);
+      text-decoration: underline;
     }
 
     footer {
-      margin-top: 32px;
+      margin-top: 24px;
+      font-size: 12px;
+      color: var(--muted);
+    }
+
+    pre {
+      background-color: var(--code-bg);
+      color: var(--code-fg);
+      padding: 12px;
+      border-radius: 6px;
+      border: 1px solid var(--code-border);
+      overflow-x: auto;
+      font-family: "Courier New", Courier, monospace;
+      font-size: 14px;
+      margin: 8px 0;
+    }
+
+    pre code {
+      display: block;
+      white-space: pre;
+    }
+
+    .language-cpp {
+      color: #79c0ff;
+    }
+
+    .language-glsl {
+      color: #ffcb6b;
+    }
+
+    .comment {
+      color: #6a9955;
+      font-style: italic;
+    }
+
+    .keyword {
+      color: #c792ea;
+      font-weight: bold;
+    }
+
+    .number {
+      color: #f07178;
+    }
+
+    .string {
+      color: #addb67;
+    }
+
+    .highlight {
+      color: #ffa348;
+      font-weight: bold;
+    }
+
+    .bad-highlight {
+      color: #d9544d;
+      font-weight: bold;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
       <h1>CATALIN POPA</h1>
     </header>
 
-    <br>
+    <br><br>
 
     <!-- ABOUT -->
     <section id="about" class="section">
       <h2 class="section-title">ABOUT</h2>
       <hr />
       <div class="section-content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Just a guy passioned about programming and technology, with focus on graphics and games.
       </div>
     </section>
+    <br>
 
     <!-- POSTS -->
     <section id="posts" class="section">
       <h2 class="section-title">POSTS</h2>
       <hr />
       <div class="section-content posts">
-        <div class="date">2025-04-10</div><div class="title">Post 1</div>
-        <div class="date">2025-04-10</div><div class="title">Post 2</div>
+        <div class="title">2026-01-27 <a href="posts/mouse-picking/mouse-picking.html">Implementing mouse picking
+            in Vulkan</a></div>
       </div>
     </section>
+    <br>
 
     <!-- CONTACT -->
-    <section id="contact" class="section">
+    <section id="section" class="section">
       <h2 class="section-title">CONTACT</h2>
       <hr />
       <div class="section-content">
@@ -140,8 +209,8 @@
     </section>
 
     <footer>
-      <hr />
     </footer>
   </div>
 </body>
+
 </html>
